feat(project): 重构jwt认证模式，完善登出功能